--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
   </main>
 
   <footer>
-    <span class="contact-email">info@calma.ad</span>
+    <span class="contact-email">info[at]calma.ad</span>
   </footer>
 
   <!-- Canvas for the wave animation -->
