meta tags update

--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
   <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/favicon/favicon-16x16.png" sizes="16x16" />
   <link rel="icon" type="image/png" href="img/favicon/favicon-128.png" sizes="128x128" />
+  <!-- Primary Meta Tags -->
+    <meta name="title" content="Calma Agency" />
+    <meta name="description" content="Keep calm, Calma generates leads" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://calma.ad/" />
+    <meta property="og:title" content="Calma Agency" />
+    <meta property="og:description" content="Keep calm, Calma generates leads" />
+    <meta property="og:image" content="img/metaimg.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://calma.ad/" />
+    <meta property="twitter:title" content="Calma Agency" />
+    <meta property="twitter:description" content="Keep calm, Calma generates leads" />
+    <meta property="twitter:image" content="img/metaimg.png" />
   <style>
     html, body {
       margin: 0; 
