--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div class="logo">Calma</div>
     <a 
       class="hiring" 
-      href="https://calma-ad.notion.site/FB-Calma-Agency-169f120c65df8062993dc296b245202d" 
+      href="https://calma-ad.notion.site/Open-Vacancies-Calma-Agency-169f120c65df806bba68fc5163bcfa52?pvs=4" 
       target="_blank"
       >
       Hiring
