--- a/v1/index.html
+++ b/v1/index.html
@@ -47,7 +47,8 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <svg class="logo-wave" viewBox="0 0 100 30" width="40" height="12">
+          <img src="./img/logo.svg" height="12" />
+          <!--<svg class="logo-wave" viewBox="0 0 100 30" width="40" height="12">
             <defs>
               <linearGradient id="waveGradient" x1="0%" y1="0%" x2="100%" y2="0%">
                 <stop offset="0%" style="stop-color:#FFD700;stop-opacity:1" />
@@ -56,7 +57,7 @@
             </defs>
             <path d="M0,15 Q25,5 50,15 T100,15" stroke="url(#waveGradient)" stroke-width="3" fill="none"/>
           </svg>
-          <span class="logo-text">calma</span>
+          <span class="logo-text">calma</span>-->
         </div>
         
         <nav class="nav">
@@ -207,16 +208,7 @@
     <div class="container">
       <div class="footer-content">
         <div class="footer-logo">
-          <svg class="logo-wave" viewBox="0 0 100 30" width="30" height="9">
-            <defs>
-              <linearGradient id="footerWaveGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                <stop offset="0%" style="stop-color:#FFD700;stop-opacity:0.7" />
-                <stop offset="100%" style="stop-color:#00FF7F;stop-opacity:0.7" />
-              </linearGradient>
-            </defs>
-            <path d="M0,15 Q25,5 50,15 T100,15" stroke="url(#footerWaveGradient)" stroke-width="2" fill="none"/>
-          </svg>
-          <span>calma</span>
+          <img src="./img/logo.svg" height="12" />
         </div>
         <div class="footer-text">
           © 2025 Calma Agency. Keep calm, we generate leads.
