--- a/v1/index.html
+++ b/v1/index.html
@@ -47,7 +47,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <img src="./img/logo.svg" height="12" />
+          <img src="./img/logo.svg" height="15" />
           <!--<svg class="logo-wave" viewBox="0 0 100 30" width="40" height="12">
             <defs>
               <linearGradient id="waveGradient" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -75,9 +75,37 @@
             <span class="notification-dot"></span>
           </a>
         </nav>
+        
+        <!-- Mobile menu button -->
+        <button class="mobile-menu-btn" id="mobileMenuBtn">
+          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <line x1="3" y1="6" x2="21" y2="6"></line>
+            <line x1="3" y1="12" x2="21" y2="12"></line>
+            <line x1="3" y1="18" x2="21" y2="18"></line>
+          </svg>
+        </button>
       </div>
     </div>
   </header>
+
+  <!-- Mobile Menu -->
+  <div class="mobile-menu" id="mobileMenu">
+    <button class="mobile-menu-close" id="mobileMenuClose">&times;</button>
+    <a href="#about" class="nav-link" onclick="closeMobileMenu()">About</a>
+    <a href="#services" class="nav-link" onclick="closeMobileMenu()">Services</a>
+    <a href="#conferences" class="nav-link" onclick="closeMobileMenu()">Events</a>
+    <a href="#contact" class="nav-link" onclick="closeMobileMenu()">Contact</a>
+    <a href="https://www.linkedin.com/company/calma-agency/" target="_blank" class="social-link">
+      <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+        <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+      </svg>
+      LinkedIn
+    </a>
+    <a href="https://calma-ad.notion.site/Open-Vacancies-Calma-Agency-169f120c65df806bba68fc5163bcfa52?pvs=4" target="_blank" class="hiring-link">
+      Hiring
+      <span class="notification-dot"></span>
+    </a>
+  </div>
 
   <!-- Hero Section -->
   <section class="hero">
