--- a/thepolicy/index.html
+++ b/thepolicy/index.html
@@ -702,7 +702,7 @@
 
         <!-- Footer -->
         <div class="footer">
-            <p><a href="#cookie-policy">Cookie Policy</a> | By continuing to use this site, you agree to our use of cookies.</p>
+            <p><a href="cookie-policy.html" target="_blank">Cookie Policy</a> | By continuing to use this site, you agree to our use of cookies.</p>
             <p>&copy; 2025 ThePolicy. Connecting you with better insurance options.</p>
         </div>
     </div>
