--- a/index.html
+++ b/index.html
@@ -256,6 +256,21 @@
           <p class="conference-location">Budapest, Hungary</p>
           <a href="https://affiliateworldconferences.com/europe" target="_blank" class="conference-link">affiliateworldconferences.com</a>
         </div>
+
+        <div class="conference-card">
+          <div>
+            <img src="img/ws-logo.png" />
+          </div>
+          <!--<div class="conference-logo">
+            <div class="conference-logo-text">AWE</div>
+            <div class="conference-logo-subtitle">Budapest</div>
+          </div>-->
+          <div class="conference-date">10-13 Nov 2025</div>
+          <h3 class="conference-name">Web Summit</h3>
+          <p class="conference-location">Lisbon, Portugal</p>
+          <a href="https://websummit.com/" target="_blank" class="conference-link">websummit.com</a>
+        </div>
+
       </div>
     </div>
   </section>
