--- a/index.html
+++ b/index.html
@@ -245,18 +245,23 @@
 
         <div class="conference-card">
           <div>
+            <img src="img/ag-logo.png" />
+          </div>
+          <div class="conference-date">29 Aug 2025</div>
+          <h3 class="conference-name">AppGala</h3>
+          <p class="conference-location">Warsaw, Poland</p>
+          <a href="https://appgala.events/lite-warsaw-aug-2025/" target="_blank" class="conference-link">appgala.events</a>
+        </div>
+
+        <div class="conference-card">
+          <div>
             <img src="img/aw-logo.png" />
           </div>
-          <!--<div class="conference-logo">
-            <div class="conference-logo-text">AWE</div>
-            <div class="conference-logo-subtitle">Budapest</div>
-          </div>-->
           <div class="conference-date">4-5 Sep 2025</div>
           <h3 class="conference-name">Affiliate World Europe</h3>
           <p class="conference-location">Budapest, Hungary</p>
           <a href="https://affiliateworldconferences.com/europe" target="_blank" class="conference-link">affiliateworldconferences.com</a>
         </div>
-<!--
         <div class="conference-card">
           <div>
             <img src="img/ws-logo.png" />
@@ -266,7 +271,6 @@
           <p class="conference-location">Lisbon, Portugal</p>
           <a href="https://websummit.com/" target="_blank" class="conference-link">websummit.com</a>
         </div>
-        -->
 
       </div>
     </div>
