--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         
         <nav class="nav">
           <a href="#about" class="nav-link">About</a>
-          <a href="#services" class="nav-link">Services</a>
+          <a href="#services" class="nav-link">Niches</a>
           <a href="#conferences" class="nav-link">Events</a>
           <a href="#contact" class="nav-link">Contact</a>
           <a href="https://www.linkedin.com/company/calma-agency/" target="_blank" class="social-link">
@@ -130,7 +130,7 @@
       <h2 class="section-title">About Calma</h2>
       <div class="about-content">
         <p class="about-text">
-          Calma is a specialized B2C lead generation agency that bridges the gap between top-tier talent and high-converting opportunities. We deliver quality leads to affiliate networks and direct clients.
+          Calma is a specialized B2C lead generation agency that bridges the gap between customer needs and high-converting opportunities. We deliver quality leads to affiliate networks and direct clients.
         </p>
         
         <div class="traffic-sources">
