more text updates

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
       <h2 class="section-title">About Calma</h2>
       <div class="about-content">
         <p class="about-text">
-          Calma is a specialized B2C lead generation agency that bridges the gap between customer needs and high-converting opportunities. We deliver quality leads to affiliate networks and direct clients.
+          Calma is a focused B2B2C lead generation agency that bridges the gap between customer needs and high-converting opportunities. We deliver quality leads to affiliate networks and direct clients.
         </p>
         
         <div class="traffic-sources">
