--- a/index.html
+++ b/index.html
@@ -214,6 +214,8 @@
       <h2 class="section-title">Meet Our Team</h2>
       <p class="section-subtitle">Find us at these upcoming industry events</p>
       
+      <div class="conferences-grid">
+        <
         
         <div class="conference-card">
           <div>
