more visual tweaks

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
   <!-- About Section -->
   <section id="about" class="section about">
     <div class="container">
-      <div class="about-layout">
+      <div class="about-content">
+        <h2 class="section-title">About Calma</h2>
         <div class="about-text-section">
-          <h2 class="section-title">About Calma</h2>
           <p class="about-text">
             We are a <strong>technology-first lead generation agency</strong> that combines artificial intelligence with strategic human oversight. Our automated systems process millions of data points to identify and engage high-intent prospects across premium verticals.
           </p>
@@ -146,22 +146,22 @@
             <span class="badge-text">AI-Driven Approach</span>
           </div>
         </div>
-        
-        <div class="approach-section">
-          <h3 class="approach-title">Our Methodology</h3>
-          <div class="approach-list">
-            <div class="approach-item">
-              <div class="approach-label">AI Audience Intelligence</div>
-              <div class="approach-desc">Machine learning algorithms identify optimal prospect profiles and behavioral patterns</div>
-            </div>
-            <div class="approach-item">
-              <div class="approach-label">Automated Optimization</div>
-              <div class="approach-desc">Real-time bid management and creative testing across all traffic sources</div>
-            </div>
-            <div class="approach-item">
-              <div class="approach-label">Quality Assurance</div>
-              <div class="approach-desc">Multi-layer verification systems ensure lead authenticity and intent</div>
-            </div>
+      </div>
+      
+      <div class="methodology">
+        <h3 class="methodology-title">Our Methodology</h3>
+        <div class="methodology-grid">
+          <div class="methodology-item">
+            <h4 class="methodology-label">AI Audience Intelligence</h4>
+            <p class="methodology-desc">Machine learning algorithms identify optimal prospect profiles and behavioral patterns</p>
+          </div>
+          <div class="methodology-item">
+            <h4 class="methodology-label">Automated Optimization</h4>
+            <p class="methodology-desc">Real-time bid management and creative testing across all traffic sources</p>
+          </div>
+          <div class="methodology-item">
+            <h4 class="methodology-label">Quality Assurance</h4>
+            <p class="methodology-desc">Multi-layer verification systems ensure lead authenticity and intent</p>
           </div>
         </div>
       </div>
