--- a/privacy.html
+++ b/privacy.html
@@ -13,7 +13,7 @@
         }
         
         .privacy-container {
-            max-width: 800px;
+            max-width: var(--content-width-main);
             margin: 0 auto;
             padding: 100px var(--space-sm) var(--space-2xl);
         }
