--- a/index.html
+++ b/index.html
@@ -274,6 +274,15 @@
           <p class="conference-location">Lisbon, Portugal</p>
           <a href="https://websummit.com/" target="_blank" class="conference-link">websummit.com</a>
         </div>
+        <div class="conference-card">
+          <div>
+            <img src="img/asw-logo.png" />
+          </div>
+          <div class="conference-date">12-14 Jan 2026</div>
+          <h3 class="conference-name">Affiliate Summit West</h3>
+          <p class="conference-location">Las Vegas, US</p>
+          <a href="https://affiliatesummit.com/west" target="_blank" class="conference-link">affiliatesummit.com</a>
+        </div>
 
       </div>
     </div>
