--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="conferences-grid">
         
 
-        <div class="conference-card">
+        <!--<div class="conference-card">
           <div>
             <img src="img/ag-logo.png" />
           </div>
@@ -254,7 +254,7 @@
           <h3 class="conference-name">AppGala</h3>
           <p class="conference-location">Warsaw, Poland</p>
           <a href="https://appgala.events/lite-warsaw-aug-2025/" target="_blank" class="conference-link">appgala.events</a>
-        </div>
+        </div>-->
 
         <div class="conference-card">
           <div>
