--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="canonical" href="https://calma.ad/">
-  <title>Calma Agency - AI-Powered Lead Generation</title>
+  <title>Calma - AI-Powered Lead Generation Agency</title>
   
   <!-- Favicons -->
   <link rel="icon" type="image/png" href="img/favicon/favicon-32x32.png" sizes="32x32">
@@ -12,20 +12,20 @@
   <link rel="apple-touch-icon" href="img/favicon/apple-icon-180x180.png">
   
   <!-- Meta Tags -->
-  <meta name="title" content="Calma Agency - AI-Powered Lead Generation">
+  <meta name="title" content="Calma - AI-Powered Lead Generation Agency">
   <meta name="description" content="Where data meets creativity to fuel lead generation success. Keep calm, Calma generates leads.">
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://calma.ad/">
-  <meta property="og:title" content="Calma Agency - AI-Powered Lead Generation">
+  <meta property="og:title" content="Calma - AI-Powered Lead Generation Agency">
   <meta property="og:description" content="Where data meets creativity to fuel lead generation success.">
   <meta property="og:image" content="https://calma.ad/img/metaimg.png">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://calma.ad/">
-  <meta property="twitter:title" content="Calma Agency - AI-Powered Lead Generation">
+  <meta property="twitter:title" content="Calma - AI-Powered Lead Generation Agency">
   <meta property="twitter:description" content="Where data meets creativity to fuel lead generation success.">
   <meta property="twitter:image" content="https://calma.ad/img/metaimg.png">
   
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="header-content">
         <div class="logo">
-          <img src="./img/logo.svg" height="15" alt="Calma Agency">
+          <img src="./img/logo.svg" height="15" alt="Calma">
         </div>
         
         <nav class="nav">
