--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="canonical" href="https://calma.ad/">
+  <link rel="canonical" href="https://calma.io/">
   <title>Calma - AI-Powered Lead Generation Agency</title>
   
   <!-- Favicons -->
@@ -17,17 +17,17 @@
   
   <!-- Open Graph -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://calma.ad/">
+  <meta property="og:url" content="https://calma.io/">
   <meta property="og:title" content="Calma - AI-Powered Lead Generation Agency">
   <meta property="og:description" content="Where data meets creativity to fuel lead generation success.">
-  <meta property="og:image" content="https://calma.ad/img/metaimg.png">
+  <meta property="og:image" content="https://calma.io/img/metaimg.png">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://calma.ad/">
+  <meta property="twitter:url" content="https://calma.io/">
   <meta property="twitter:title" content="Calma - AI-Powered Lead Generation Agency">
   <meta property="twitter:description" content="Where data meets creativity to fuel lead generation success.">
-  <meta property="twitter:image" content="https://calma.ad/img/metaimg.png">
+  <meta property="twitter:image" content="https://calma.io/img/metaimg.png">
   
   <link rel="stylesheet" href="style.css">
 </head>
@@ -293,7 +293,7 @@
           <p>Let's discuss how we can help grow your business.</p>
           <div class="contact-email">
             <span>Email us: </span>
-            <a href="mailto:info@calma.ad">info@calma.ad</a>
+            <a href="mailto:info@calma.io">info@calma.io</a>
           </div>
           <div class="careers-link">
             <p>Want to work with us? <a href="https://calma-ad.notion.site/Open-Vacancies-Calma-Agency-169f120c65df806bba68fc5163bcfa52?pvs=4" target="_blank" class="careers-link-text">Check out our open positions</a></p>
