--- a/privacy.html
+++ b/privacy.html
@@ -197,7 +197,7 @@
             <h2>6. Contact Information</h2>
             <div class="privacy-contact">
                 <p>If you have questions about this Privacy Policy, please contact us at:</p>
-                <p><strong>Email:</strong> <a href="mailto:info@calma.ad">info@calma.ad</a></p>
+                <p><strong>Email:</strong> <a href="mailto:info@calma.io">info@calma.io</a></p>
             </div>
         </div>
 
