--- a/index.html
+++ b/index.html
@@ -216,15 +216,6 @@
       <div class="events-section">
         <h3 class="events-section-title">Upcoming Events</h3>
         <div class="conferences-grid">
-          <a href="https://websummit.com/" target="_blank" class="conference-card">
-            <div class="conference-logo-wrapper">
-              <img src="img/ws-logo.png" alt="Web Summit">
-            </div>
-            <div class="conference-date">10-13 Nov 2025</div>
-            <h4 class="conference-name">Web Summit</h4>
-            <p class="conference-location">Lisbon, Portugal</p>
-            <span class="conference-link">websummit.com</span>
-          </a>
           
           <a href="https://affiliatesummit.com/west" target="_blank" class="conference-card">
             <div class="conference-logo-wrapper">
@@ -234,6 +225,25 @@
             <h4 class="conference-name">Affiliate Summit West</h4>
             <p class="conference-location">Las Vegas, US</p>
             <span class="conference-link">affiliatesummit.com</span>
+          </a>
+
+          <a href="https://www.affiliatetakeover.com/miami" target="_blank" class="conference-card">
+            <div class="conference-logo-wrapper">
+              <img src="img/ato-logo.png" alt="Affiliate Takeover">
+            </div>
+            <div class="conference-date">18-19 Mar 2026</div>
+            <h4 class="conference-name">Affiliate Takeover</h4>
+            <p class="conference-location">Miami, US</p>
+            <span class="conference-link">affiliatetakeover.com</span>
+          </a>
+          <a href="https://www.leadscon.com/event/leadscon-las-vegas-2026/" target="_blank" class="conference-card">
+            <div class="conference-logo-wrapper">
+              <img src="img/lc-logo.png" alt="LeadsCon">
+            </div>
+            <div class="conference-date">20-24 Apr 2026</div>
+            <h4 class="conference-name">LeadsCon</h4>
+            <p class="conference-location">Las Vegas, US</p>
+            <span class="conference-link">leadscon.com</span>
           </a>
         </div>
       </div>
@@ -249,6 +259,11 @@
         
         <div class="past-events-content" id="pastEventsContent">
           <div class="past-events-grid">
+            <div class="past-conference-card">
+              <div class="past-conference-date">Nov 2025</div>
+              <h4 class="past-conference-name">Web Summit</h4>
+              <p class="past-conference-location">Lisbon, Portugal</p>
+            </div>
             <div class="past-conference-card">
               <div class="past-conference-date">Sep 2025</div>
               <h4 class="past-conference-name">SBC</h4>
