--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a href="#services" class="nav-link">Services</a>
           <a href="#conferences" class="nav-link">Events</a>
           <a href="#contact" class="nav-link">Contact</a>
-          <a href="https://www.linkedin.com/company/calma-agency/" target="_blank" class="social-link" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/company/calma-io/" target="_blank" class="social-link" aria-label="LinkedIn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
             </svg>
@@ -76,7 +76,7 @@
     <a href="#services" class="nav-link" onclick="closeMobileMenu()">Services</a>
     <a href="#conferences" class="nav-link" onclick="closeMobileMenu()">Events</a>
     <a href="#contact" class="nav-link" onclick="closeMobileMenu()">Contact</a>
-    <a href="https://www.linkedin.com/company/calma-agency/" target="_blank" class="social-link">
+    <a href="https://www.linkedin.com/company/calma-io/" target="_blank" class="social-link">
       <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
         <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
       </svg>
@@ -342,10 +342,10 @@
           <img src="./img/logo.svg" height="12" alt="Calma">
         </div>
         <div class="footer-text">
-          © 2025 Calma / <a href="privacy.html" target="_blank" style="color:rgba(255, 255, 255, 0.6);text-decoration:none;">Privacy Policy</a>
+          © 2025 Calma / <a href="./privacy/index.html" target="_blank" style="color:rgba(255, 255, 255, 0.6);text-decoration:none;">Privacy Policy</a>
         </div>
         <div class="footer-social">
-          <a href="https://www.linkedin.com/company/calma-agency/" target="_blank" class="footer-linkedin" aria-label="LinkedIn">
+          <a href="https://www.linkedin.com/company/calma-io/" target="_blank" class="footer-linkedin" aria-label="LinkedIn">
             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
               <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
             </svg>
