--- a/privacy/index.html
+++ b/privacy/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Calma Agency</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Calma — Privacy Policy</title>
+    <link rel="stylesheet" href="../style.css">
     <style>
         /* Privacy page specific overrides */
         body {
@@ -143,10 +143,10 @@
 </head>
 <body>
     <div class="privacy-container">
-        <a href="/" class="back-to-home">← Back to Home</a>
+        <a href="../" class="back-to-home">← Back to Home</a>
         
         <h1 class="privacy-title">Privacy Policy</h1>
-        <p class="last-updated">Last updated: June 12, 2025</p>
+        <p class="last-updated">Last updated: Nov 19, 2025</p>
 
         <div class="privacy-section">
             <h2>1. Information We Collect</h2>
