--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <img src="./img/logo.svg" height="12" alt="Calma">
         </div>
         <div class="footer-text">
-          © 2025 Calma / <a href="./privacy/index.html" target="_blank" style="color:rgba(255, 255, 255, 0.6);text-decoration:none;">Privacy Policy</a>
+          © 2025 Calma / <a href="./privacy/" target="_blank" style="color:rgba(255, 255, 255, 0.6);text-decoration:none;">Privacy Policy</a>
         </div>
         <div class="footer-social">
           <a href="https://www.linkedin.com/company/calma-io/" target="_blank" class="footer-linkedin" aria-label="LinkedIn">
