--- a/index.html
+++ b/index.html
@@ -245,6 +245,16 @@
             <p class="conference-location">Las Vegas, US</p>
             <span class="conference-link">leadscon.com</span>
           </a>
+
+           <a href="https://affiliatesummit.com/east" target="_blank" class="conference-card">
+            <div class="conference-logo-wrapper">
+              <img src="img/ase-logo.png" alt="Affiliate Summit">
+            </div>
+            <div class="conference-date">27-28 Jul 2026</div>
+            <h4 class="conference-name">Affiliate Summit East</h4>
+            <p class="conference-location">New York, US</p>
+            <span class="conference-link">affiliatesummit.com</span>
+          </a>
         </div>
       </div>
       
