team section hidden

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   <!-- To remove: delete everything between TEAM SECTION START/END,
        remove the <link> to team.css in <head>,
        and remove the team.js <script> before </body> -->
-  <section id="team" class="section team">
+  <!--<section id="team" class="section team">
     <div class="container">
       <h2 class="section-title">The Team</h2>
       <p class="section-subtitle">The people behind the leads</p>
@@ -378,7 +378,7 @@
         <div class="team-dots" id="teamDots"></div>
       </div>
     </div>
-  </section>
+  </section>-->
   <!-- ========== TEAM SECTION END ========== -->
 
   <!-- Events -->
