more team hidden

--- a/index.html
+++ b/index.html
@@ -362,20 +362,20 @@
             </div>
           </div>
 
-        </div>
+        </div>-->
 
         <!-- Navigation -->
-        <div class="team-nav">
+       <!-- <div class="team-nav">
           <button class="team-nav-btn" id="teamPrev" aria-label="Previous">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m15 18-6-6 6-6"/></svg>
           </button>
           <button class="team-nav-btn" id="teamNext" aria-label="Next">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m9 18 6-6-6-6"/></svg>
           </button>
-        </div>
+        </div>-->
 
         <!-- Progress dots -->
-        <div class="team-dots" id="teamDots"></div>
+        <!--<div class="team-dots" id="teamDots"></div>
       </div>
     </div>
   </section>-->
