--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <nav class="nav">
           <a href="#about" class="nav-link">About</a>
           <a href="#services" class="nav-link">Services</a>
-          <a href="#team" class="nav-link">Team</a>
+          <!--<a href="#team" class="nav-link">Team</a>-->
           <a href="#conferences" class="nav-link">Events</a>
           <a href="#contact" class="nav-link">Contact</a>
           <a href="https://www.linkedin.com/company/calma-io/" target="_blank" class="social-link" aria-label="LinkedIn">
@@ -223,12 +223,8 @@
         <div class="team-track" id="teamTrack">
 
           <div class="team-card">
-            <div class="team-avatar">
-              <svg viewBox="0 0 260 260" xmlns="http://www.w3.org/2000/svg">
-                <defs><linearGradient id="g1" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="#FFD700"/><stop offset="100%" stop-color="#FFA500"/></linearGradient></defs>
-                <rect width="260" height="260" fill="url(#g1)"/>
-                <text x="130" y="145" text-anchor="middle" fill="#0a0a0a" font-family="Geologica,sans-serif" font-size="72" font-weight="700">R</text>
-              </svg>
+            <div class="team-avatar" style="background: linear-gradient(135deg, #FFD700, #FFA500);">
+              <img src="img/f1.png" alt="Rus">
             </div>
             <div class="team-info">
               <div class="team-name">Rus</div>
@@ -237,12 +233,8 @@
           </div>
 
           <div class="team-card">
-            <div class="team-avatar">
-              <svg viewBox="0 0 260 260" xmlns="http://www.w3.org/2000/svg">
-                <defs><linearGradient id="g2" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="#00FF7F"/><stop offset="100%" stop-color="#00CED1"/></linearGradient></defs>
-                <rect width="260" height="260" fill="url(#g2)"/>
-                <text x="130" y="145" text-anchor="middle" fill="#0a0a0a" font-family="Geologica,sans-serif" font-size="72" font-weight="700">Y</text>
-              </svg>
+            <div class="team-avatar" style="background: linear-gradient(135deg, #00FF7F, #00CED1);">
+              <img src="img/f2.png" alt="Yehor">
             </div>
             <div class="team-info">
               <div class="team-name">Yehor</div>
@@ -251,12 +243,8 @@
           </div>
 
           <div class="team-card">
-            <div class="team-avatar">
-              <svg viewBox="0 0 260 260" xmlns="http://www.w3.org/2000/svg">
-                <defs><linearGradient id="g3" x1="0" y1="0" x2="1" y2="1"><stop offset="0%" stop-color="#7B68EE"/><stop offset="100%" stop-color="#DA70D6"/></linearGradient></defs>
-                <rect width="260" height="260" fill="url(#g3)"/>
-                <text x="130" y="145" text-anchor="middle" fill="#0a0a0a" font-family="Geologica,sans-serif" font-size="72" font-weight="700">A</text>
-              </svg>
+            <div class="team-avatar" style="background: linear-gradient(135deg, #7B68EE, #DA70D6);">
+              <img src="img/f3.png" alt="Artur">
             </div>
             <div class="team-info">
               <div class="team-name">Artur</div>
@@ -365,7 +353,7 @@
         </div>-->
 
         <!-- Navigation -->
-       <!-- <div class="team-nav">
+        <!--<div class="team-nav">
           <button class="team-nav-btn" id="teamPrev" aria-label="Previous">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="m15 18-6-6 6-6"/></svg>
           </button>
@@ -375,7 +363,7 @@
         </div>-->
 
         <!-- Progress dots -->
-        <!--<div class="team-dots" id="teamDots"></div>
+       <!-- <div class="team-dots" id="teamDots"></div>
       </div>
     </div>
   </section>-->
