--- a/index.html
+++ b/index.html
@@ -380,6 +380,16 @@
         <h3 class="events-section-title">Upcoming Events</h3>
         <div class="conferences-grid">
 
+          <a href="https://affiliateworldconferences.com/dubai" target="_blank" class="conference-card">
+            <div class="conference-logo-wrapper">
+              <img src="img/aw-logo.png" alt="Affiliate World">
+            </div>
+            <div class="conference-date">18-19 Mar 2026</div>
+            <h4 class="conference-name">Affiliate World</h4>
+            <p class="conference-location">Dubai, UAE</p>
+            <span class="conference-link">affiliateworldconferences.com</span>
+          </a>
+
           <a href="https://www.affiliatetakeover.com/miami" target="_blank" class="conference-card">
             <div class="conference-logo-wrapper">
               <img src="img/ato-logo.png" alt="Affiliate Takeover">
